Refactoring
Signed-off-by: Nils Christian Ehmke <nils@rhocas.de>